[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defectdojo-mcp"
version = "0.1.2"
description = "DefectDojo MCP server for integrating with DefectDojo vulnerability management system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jamiesonio" },
]
license = { text = "MIT" }
keywords = ["defectdojo", "appsec", "mcp", "devsecops", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/jamiesonio/defectdojo-mcp"
Repository = "https://github.com/jamiesonio/defectdojo-mcp"
"Issue Tracker" = "https://github.com/jamiesonio/defectdojo-mcp/issues"

[project.scripts]
defectdojo-mcp = "defectdojo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
